--- a/calculadora/indes.html
+++ b/calculadora/indes.html
@@ -9,6 +9,7 @@
 <body>
     <section>
         <table>
+            <p id="visor"></p>
             <tr>
                 <td class="btn-cima">AC</td>
                 <td class="btn-cima">(</td>
