--- a/calculadora/indes.html
+++ b/calculadora/indes.html
@@ -11,34 +11,34 @@
         <table>
             <p id="visor"></p>
             <tr>
-                <td class="btn-cima">AC</td>
-                <td class="btn-cima">(</td>
-                <td class="btn-cima">)</td>
-                <td class="btn-dir">/</td>
+                <td><button  class="btn-cima">AC</button></td>
+                <td><button  class="btn-cima">(</button></td>
+                <td><button  class="btn-cima">)</button></td>
+                <td><button class="btn-dir">/</button></td>
             </tr>
             <tr>
-                <td class="btn-num">7</td>
-                <td class="btn-num">8</td>
-                <td class="btn-num">9</td>
-                <td class="btn-dir">*</td>
+                <td><button class="btn-num">7</button></td>
+                <td><button class="btn-num">8</button></td>
+                <td><button class="btn-num">9</button></td>
+                <td><button class="btn-dir">*</button></td>
             </tr>
             <tr>
-                <td class="btn-num">4</td>
-                <td class="btn-num">5</td>
-                <td class="btn-num">6</td>
-                <td class="btn-dir">+</td>
+                <td><button class="btn-num">4</button></td>
+                <td><button class="btn-num">5</button></td>
+                <td><button class="btn-num">6</button></td>
+                <td><button class="btn-dir">+</button></td>
             </tr>
             <tr>
-                <td class="btn-num">1</td>
-                <td class="btn-num">2</td>
-                <td class="btn-num">3</td>
-                <td class="btn-dir">-</td>
+                <td><button class="btn-num">1</button></td>
+                <td><button class="btn-num">2</button></td>
+                <td><button class="btn-num">3</button></td>
+                <td><button class="btn-dir">-</button></td>
             </tr>
             <tr>
-                <td class="btn-num">.</td>
-                <td class="btn-num">0</td>
-                <td class="btn-num"><<</td>
-                <td class="btn-dir">=</td>
+                <td><button class="btn-num">.</button></td>
+                <td><button class="btn-num">0</button></td>
+                <td><button class="btn-num"><<</button></td>
+                <td><button class="btn-dir">=</button></td>
             </tr>
         </table>
     </section>
