--- a/calculadora/indes.html
+++ b/calculadora/indes.html
@@ -37,7 +37,7 @@
             <tr>
                 <td><button class="btn-num">.</button></td>
                 <td><button class="btn-num">0</button></td>
-                <td><button class="btn-num"><<</button></td>
+                <td><button class="btn-del"><<</button></td>
                 <td><button class="btn-dir">=</button></td>
             </tr>
         </table>
